appId: com.shelbeely.gitcommand
---

- runFlow: ../assert.yaml
- runFlow:
    when: 
      notVisible: "HTTPS"
    commands:
      - tapOn: ".*auth dropdown"
      - assertVisible: "HTTPS"
      - tapOn: "HTTPS"