appId: com.shelbeely.gitcommand
---

- runFlow: ./assert.yaml
- tapOn: "Documents"
- tapOn: "USE THIS FOLDER"
- assertVisible: "ALLOW"
- tapOn: "ALLOW"
- assertVisible: "Folder Not Empty"
- assertVisible: "CANCEL"
- tapOn: "CANCEL"