appId: com.shelbeely.gitcommand
---
- runFlow: ./assert.yaml
- tapOn: "Documents"
- tapOn:
    id: "com.android.documentsui:id/option_menu_create_dir"
- evalScript: ${output.randomNumber = (Math.floor(Math.random() * 10000) + 1).toString()}
- inputText: ${output.randomNumber}
- assertVisible: "OK"
- tapOn: "OK"
- assertVisible: ${output.randomNumber}
- tapOn: ${output.randomNumber}
- assertVisible: "USE THIS FOLDER"
- tapOn: "USE THIS FOLDER"
- assertVisible: "ALLOW"
- tapOn: "ALLOW"

- runFlow:
    when:
      visible: "Folder Not Empty"
    commands:
      - tapOn: OVERWRITE
