appId: com.shelbeely.gitcommand
---
- runFlow: ./assert.yaml
- tapOn: "https://git.abc/xyz.git"
- inputText: ${MAESTRO_GITHUB_CLONE_URL}
- hideKeyboard
- tapOn: "CLONE"
