appId: com.android.settings
---
- launchApp
- tapOn: "Search.*"
- inputText: "GitSync"
- tapOn: "App info"
- tapOn: "Storage & cache"
- tapOn: "Clear storage"
- tapOn: "Delete"
- back
- back
- back
- back
- killApp
