appId: com.shelbeely.gitcommand
---
- launchApp:
    appId: com.shelbeely.gitcommand
- assertVisible: "GitSync"
- tapOn: ".*TestObsidianVault\\.git.*"
- assertVisible: "MANUAL SYNC"
- takeScreenshot: generate_screenshots/raw/screenshot_manual_sync
