appId: com.shelbeely.gitcommand
---
- tapOn: AUTHOR EMAIL
- tapOn:
    below: AUTHOR EMAIL
- eraseText
- inputText: "bugs.viscouspotential@gmail.com"
- hideKeyboard
