appId: com.shelbeely.gitcommand
---
- tapOn: AUTHOR NAME
- tapOn:
    below: AUTHOR NAME
- eraseText
- inputText: "ViscousTests"
- hideKeyboard
